fixed card spacing

--- a/css/main.css
+++ b/css/main.css
@@ -253,8 +253,12 @@ form{
     margin-top: 20px;
 }
 
+.card-ingredients h3 {
+  margin-top: 0px;
+}
+
 .card-ingredients, .card-body, .card-glass {
-  margin: 0 100px 40px 100px;
+  margin: 0 100px;
 }
 
 .card ul {
@@ -267,6 +271,19 @@ form{
 .card p {
   font-size: 1.3em;
   margin-top: 0;
+  margin-bottom: 0;
+}
+
+.card-body {
+  margin-bottom: 0;
+}
+
+.card-body h3 {
+  margin-top: 0;
+}
+
+.card-glass h3 {
+  margin-top: 12px;
 }
 
 .card-close {
